--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "eblocbrokergit",
-  "version": "1.0.0",
-  "description": "## About Recently, peer-to-peer based blockchain infrastructures have emerged as disruptive technologies and have lead to the realization of crypto-currencies and smart contracts that can used in a globally trustless manner. eBlocBroker is a blockchain based autonomous computational resource broker",
-  "main": "main.js",
-  "directories": {
-    "doc": "docs"
-  },
-  "dependencies": {
-    "binstring": "^0.2.1",
-    "bs58": "^4.0.1",
-    "web3": "^0.19.0",
-    "web3_ipc": "^1.4.0"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://l_avventura@bitbucket.org/l_avventura/ethereum.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "homepage": "https://bitbucket.org/l_avventura/ethereum#readme"
+    "name": "eblocbrokergit",
+    "version": "1.0.0",
+    "description": "## eBlocBroker is a blockchain based autonomous computational resource broker",
+    "main": "main.js",
+    "directories": {
+	"doc": "docs"
+    },
+    "dependencies": {
+	"binstring": "*",
+	"bs58": "*",
+	"web3": "*",
+	"web3_ipc": "*",
+	"minilock-cli": "*"	
+    },
+    "devDependencies": {},
+    "scripts": {
+	"test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+	"type": "git",
+	"url": "git+https://github.com/ebloc/eBlocBroker.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "homepage": "http://ebloc.cmpe.boun.edu.tr:3003"
 }
