updated, new contract is deploted.

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,7 @@ contract/migrations/__init__\.py
 eudatPassword\.txt
 
 contracts/populus\.ini
+
+\.node-xmlhttprequest-sync-31931
+
+contractCalls/\.node-xmlhttprequest-sync-13830
