--- a/.gitignore
+++ b/.gitignore
@@ -49,8 +49,8 @@ eudatPassword\.txt
 
 contracts/populus\.ini
 
-\.node-xmlhttprequest-sync-18637
-
-\.#main\.js
+contractCalls/\.node-xmlhttprequest-sync-13830
 
 contract/receipt\.txt
+
+\.#main\.js
