--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
    "dependencies": {
       "binstring": "*",
       "bs58": "*",
+      "minilock-cli": "*",
       "web3": "0.20.5",
-      "web3_ipc": "*",
-      "minilock-cli": "*"
+      "web3-eth-personal": "^1.0.0-beta.31",
+      "web3_ipc": "*"
    },
    "devDependencies": {},
    "scripts": {
