--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,13 @@ contracts/populus\.ini
 contractCalls/\.node-xmlhttprequest-sync-13830
 
 \.#main\.js
+
+\.#l
+
+\.node-xmlhttprequest-sync-27004
+
+contract/\.cache/v/populus/project/
+
+contract/receipt\.txt
+
+contractCalls/nohup\.out
