--- a/slurmGuide/emulatorMode/slurmdbd.conf
+++ b/slurmGuide/emulatorMode/slurmdbd.conf
@@ -19,7 +19,7 @@ AuthInfo=/var/run/munge/munge.socket.2
 DbdAddr=localhost
 DbdHost=localhost
 #DbdPort=7031
-SlurmUser=root
+SlurmUser=root #alper
 #MessageTimeout=300
 DebugLevel=4
 #DefaultQOS=normal,standby
@@ -31,5 +31,7 @@ PidFile=/var/run/slurmdbd.pid
 #
 # Database info
 StorageType=accounting_storage/mysql
+#StorageHost=localhost
+#StoragePort=1234
 StorageUser=root
-StoragePass=password
+StoragePass=12345
