--- a/slurmGuide/emulatorMode/slurm.conf
+++ b/slurmGuide/emulatorMode/slurm.conf
@@ -4,10 +4,9 @@
 #
 ControlMachine=ebloc
 ControlAddr=127.0.0.1
-
+#ControlAddr=192.168.4.59
 #BackupController=
 #BackupAddr=
-#
 AuthType=auth/munge
 #CheckpointType=checkpoint/none
 CryptoType=crypto/munge
@@ -29,8 +28,7 @@ CryptoType=crypto/munge
 #KillOnBadExit=0
 #LaunchType=launch/slurm
 #Licenses=foo*4,bar
-#MailProg=/bin/mail
-#MailProg=/home/whoami/eBlocBroker/slurmScript.sh #######################IMPORTANT CHANGE
+MailProg=/home/alper/eBlocBroker/slurmScript.sh
 #MaxJobCount=5000
 #MaxStepCount=40000
 #MaxTasksPerNode=128
@@ -160,6 +158,11 @@ SlurmdDebug=3
 #
 #
 # COMPUTE NODES
-NodeName=ebloc[1-128] NodeHostName=localhost NodeAddr=127.0.0.1 CPUs=1
-PartitionName=debug Nodes=ebloc[1-4] Default=YES MaxTime=INFINITE State=UP
+NodeName=ebloc[1-128] NodeHostName=localhost NodeAddr=127.0.0.1 CPUs=2
+PartitionName=debug Nodes=ebloc[1-128] Default=YES MaxTime=INFINITE State=UP
 
+#NodeName=ebloc1 NodeHostName=ebloc NodeAddr=ec2-34-229-40-175.compute-1.amazonaws.com CPUs=1
+#PartitionName=debug Nodes=ebloc1 Default=YES MaxTime=INFINITE State=UP
+
+#NodeName=ebloc4 NodeHostName=ebloc NodeAddr=54.236.173.82 CPUs=1
+#PartitionName=debug Nodes=ebloc4 Default=YES MaxTime=INFINITE State=UP
