--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,29 @@ nohup\.out
 
  \?
 
+
+slurmGuide/example/completed\.txt
+
+slurmGuide/example/hello
+
+slurmGuide/example/helloworldd\.txt
+
+slurmGuide/example/slurm\.err
+
+slurmGuide/example/slurm\.out
+
+miniLockPassword\.txt
+
+\.node-xmlhttprequest-sync-31728
+
+\.node-xmlhttprequest-sync-13965
+
+\.node-xmlhttprequest-sync-14725
+
+\.node-xmlhttprequest-sync-15076
+
+\.node-xmlhttprequest-sync-15266
+
+\.node-xmlhttprequest-sync-15558
+
+contractCalls/ipfs\.out
