--- a/slurmGuide/emulatorMode/slurm.conf
+++ b/slurmGuide/emulatorMode/slurm.conf
@@ -48,12 +48,11 @@ ProctrackType=proctrack/pgid
 ReturnToService=1
 #SallocDefaultCommand=
 SlurmctldPidFile=/var/run/slurmctld.pid
-SlurmctldPort=6820 #6817
+SlurmctldPort=6820
 SlurmdPidFile=/var/run/slurmd.pid
-SlurmdPort=6821 #6818
+SlurmdPort=6821
 SlurmdSpoolDir=/var/spool/slurmd
-SlurmUser=root
-#SlurmdUser=root
+SlurmUser=alper
 #SrunEpilog=
 #SrunProlog=
 StateSaveLocation=/tmp/slurmstate
@@ -158,8 +157,8 @@ SlurmdDebug=3
 #
 #
 # COMPUTE NODES
-NodeName=ebloc[1-128] NodeHostName=localhost NodeAddr=127.0.0.1 CPUs=2
-PartitionName=debug Nodes=ebloc[1-128] Default=YES MaxTime=INFINITE State=UP
+NodeName=ebloc[1-4] NodeHostName=localhost NodeAddr=127.0.0.1 CPUs=2
+PartitionName=debug Nodes=ebloc[1-4] Default=YES MaxTime=INFINITE State=UP
 
 #NodeName=ebloc1 NodeHostName=ebloc NodeAddr=ec2-34-229-40-175.compute-1.amazonaws.com CPUs=1
 #PartitionName=debug Nodes=ebloc1 Default=YES MaxTime=INFINITE State=UP
