--- a/slurmGuide/emulatorMode/slurmdbd.conf
+++ b/slurmGuide/emulatorMode/slurmdbd.conf
@@ -19,7 +19,7 @@ AuthInfo=/var/run/munge/munge.socket.2
 DbdAddr=localhost
 DbdHost=localhost
 #DbdPort=7031
-SlurmUser=root #alper
+SlurmUser=alper
 #MessageTimeout=300
 DebugLevel=4
 #DefaultQOS=normal,standby
@@ -33,5 +33,5 @@ PidFile=/var/run/slurmdbd.pid
 StorageType=accounting_storage/mysql
 #StorageHost=localhost
 #StoragePort=1234
-StorageUser=root
+StorageUser=alper
 StoragePass=12345
