some more update.

--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,9 @@ miniLockPassword\.txt
 modifiedDate\.txt
 
 ipfs\.out
+
+\.node-xmlhttprequest-sync-27351
+
+\.node-xmlhttprequest-sync-27769
+
+\.node-xmlhttprequest-sync-30119
