--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,9 @@ contractCalls/\.#getClusterInfo\.py
 \.#slurmScript\.sh
 
 \.#driverFunc\.py
+
+contract/logs/geth-20180416-110301-temp-stdout\.log
+
+contract/logs/geth-20180416-110301-temp-stderr\.log
+
+contract/build/contracts\.json
