--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,11 @@ contract/build/contracts\.json
 contractCalls/\.#address\.json
 
 contractCalls/#address\.json#
+
+contract/\.pytest_cache/v/populus/project/compiled_contracts
+
+contract/\.cache/v/cache/lastfailed
+
+contract/\.pytest_cache/v/cache/lastfailed
+
+contract/\.pytest_cache/v/cache/nodeids
