--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,9 @@ contract/\.pytest_cache/v/cache/nodeids
 contractCalls/venv/
 
 \.#constants\.py
+
+dd\.sh
+
+\.#runIPFS\.sh
+
+contract/\.pytest_cache/v/populus/project/compiled_contracts_mtime
