--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
       "bs58": "*",
       "minilock-cli": "*",
       "sleep": "^5.1.1",
-      "web3": "0.20.5",
+      "web3": "^0.20.5",
       "web3-eth-personal": "^1.0.0-beta.31",
       "web3_ipc": "*"
    },
