generate test update.

--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,341 @@ eBlocBroker/
 dd\.txt
 
 dd\.py
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/bin/bt\.A\.x
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/bin/bt\.B\.x
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/bin/bt\.C\.x
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/bin/is\.C\.x
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/bin/lu\.B\.x
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/bin/sp\.B\.x
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/bin/sp\.C\.x
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/bin/ua\.B\.x
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/bin/ua\.C\.x
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/BT/add\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/BT/adi\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/BT/bt\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/BT/error\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/BT/exact_rhs\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/BT/exact_solution\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/BT/header\.h
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/BT/initialize\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/BT/inputbt\.data\.sample
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/BT/Makefile
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/BT/rhs\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/BT/set_constants\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/BT/solve_subs\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/BT/verify\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/BT/work_lhs_vec\.h
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/BT/work_lhs\.h
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/BT/x_solve_vec\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/BT/x_solve\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/BT/y_solve_vec\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/BT/y_solve\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/BT/z_solve_vec\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/BT/z_solve\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/CG/cg\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/CG/globals\.h
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/CG/Makefile
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/CG/README\.carefully
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/common/c_print_results\.c
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/common/c_timers\.c
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/common/print_results\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/common/randdp\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/common/randdpvec\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/common/randi8_safe\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/common/randi8\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/common/timers\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/common/wtime_sgi64\.c
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/common/wtime\.c
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/common/wtime\.h
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/config/make\.def
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/config/make\.def\.template
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/config/NAS\.samples/make\.def_crayx1
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/config/NAS\.samples/make\.def_gcc_x86
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/config/NAS\.samples/make\.def_ibm
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/config/NAS\.samples/make\.def_ibm64
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/config/NAS\.samples/make\.def_intel
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/config/NAS\.samples/make\.def_pgi
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/config/NAS\.samples/make\.def_sgi
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/config/NAS\.samples/make\.def_sgi64
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/config/NAS\.samples/make\.def_sun
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/config/NAS\.samples/make\.def_sun64
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/config/NAS\.samples/README
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/config/NAS\.samples/suite\.def\.bt
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/config/NAS\.samples/suite\.def\.cg
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/config/NAS\.samples/suite\.def\.ep
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/config/NAS\.samples/suite\.def\.ft
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/config/NAS\.samples/suite\.def\.is
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/config/NAS\.samples/suite\.def\.lu
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/config/NAS\.samples/suite\.def\.mg
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/config/NAS\.samples/suite\.def\.sp
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/config/suite\.def\.template
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/DC/adc\.c
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/DC/adc\.h
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/DC/ADC\.par
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/DC/adcc\.h
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/DC/dc\.c
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/DC/extbuild\.c
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/DC/jobcntl\.c
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/DC/macrodef\.h
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/DC/Makefile
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/DC/protots\.h
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/DC/rbt\.c
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/DC/rbt\.h
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/DC/README
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/EP/ep\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/EP/Makefile
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/EP/README
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/FT/appft\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/FT/auxfnct\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/FT/fft3d\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/FT/global\.h
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/FT/mainft\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/FT/Makefile
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/FT/verify\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/IS/is\.c
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/IS/Makefile
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/IS/README\.carefully
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/applu\.incl
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/blts_vec\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/blts\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/buts_vec\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/buts\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/domain\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/erhs\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/error\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/exact\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/inputlu\.data\.sample
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/jacld\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/jacu\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/l2norm\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/lu\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/Makefile
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/pintgr\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/read_input\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/rhs_vec\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/rhs\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/setbv\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/setcoeff\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/setiv\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/ssor_vec\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/ssor\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/LU/verify\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/Makefile
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/MG/globals\.h
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/MG/Makefile
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/MG/mg\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/MG/mg\.input\.sample
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/MG/README
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/README
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/README\.install
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/results\.txt
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/SP/add\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/SP/adi\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/SP/error\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/SP/exact_rhs\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/SP/exact_solution\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/SP/header\.h
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/SP/initialize\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/SP/inputsp\.data\.sample
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/SP/Makefile
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/SP/ninvr\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/SP/pinvr\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/SP/rhs\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/SP/set_constants\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/SP/sp\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/SP/txinvr\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/SP/tzetar\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/SP/verify\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/SP/x_solve\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/SP/y_solve\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/SP/z_solve\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/sys/make\.common
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/sys/Makefile
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/sys/print_header
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/sys/print_instructions
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/sys/README
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/sys/setparams\.c
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/sys/suite\.awk
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/UA/adapt\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/UA/convect\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/UA/diffuse\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/UA/header\.h
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/UA/Makefile
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/UA/mason\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/UA/move\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/UA/precond\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/UA/README
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/UA/setup\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/UA/transfer\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/UA/ua\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/UA/utils\.f
+
+generateTest/nasEudat/ipfs/NPB3\.3-SER/UA/verify\.f
