--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
    "dependencies": {
       "binstring": "*",
       "bs58": "*",
+      "dotenv": "^6.0.0",
       "minilock-cli": "*",
+      "require": "^2.4.20",
       "sleep": "^5.1.1",
       "web3": "^1.0.0-beta.35",
       "web3-eth-personal": "^1.0.0-beta.31",
