--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
       "dotenv": "^6.0.0",
       "minilock-cli": "*",
       "require": "^2.4.20",
+      "scrypt": "^6.0.3",
       "sleep": "^5.1.1",
       "web3": "^1.0.0-beta.35",
       "web3-eth-personal": "^1.0.0-beta.31",
