--- a/requirements.txt
+++ b/requirements.txt
@@ -3,29 +3,36 @@ base58==1.0.3
 certifi==2019.3.9
 chardet==3.0.4
 colored==1.3.93
+cycler==0.10.0
 cytoolz==0.9.0.1
+-e git+https://github.com/ebloc/eBlocBroker.git@a78bd1aedc3b75d438106b44fc1f1c5c6eee899d#egg=eBlocBroker
 eth-abi==1.3.0
 eth-account==0.3.0
 eth-hash==0.2.0
 eth-keyfile==0.5.1
-eth-keys==0.2.2
+eth-keys==0.2.3
 eth-rlp==0.1.2
 eth-typing==2.1.0
-eth-utils==1.5.2
-hexbytes==0.1.0
+eth-utils==1.6.0
+hexbytes==0.2.0
 idna==2.8
+kiwisolver==1.1.0
 lru-dict==1.1.6
+matplotlib==3.1.0
+numpy==1.16.4
 parsimonious==0.8.1
-pycryptodome==3.8.1
+pycryptodome==3.8.2
 pydot==1.4.1
 pymongo==3.8.0
 pyocclient==0.4
 pyparsing==2.4.0
-python-dotenv==0.10.2
-requests==2.21.0
+python-dateutil==2.8.0
+python-dotenv==0.10.3
+requests==2.22.0
 rlp==1.1.0
 six==1.12.0
 toolz==0.9.0
-urllib3==1.24.3
+typing==3.6.6
+urllib3==1.25.3
 web3==4.9.2
 websockets==6.0
