--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ lru-dict==1.1.6
 matplotlib==3.1.0
 numpy==1.16.4
 parsimonious==0.8.1
+py-solc==3.2.0
 pycryptodome==3.8.2
 pydot==1.4.1
 pymongo==3.8.0
