Contract commitment for prices
Contract commit prices


Contract update_


Update


update
u
update
update
u


u


u


update


update

--- a/contract/brownie-config.json
+++ b/contract/brownie-config.json
@@ -13,7 +13,10 @@
         "ropsten": {
             "host": "https://ropsten.infura.io/",
             "persist": true
-        }
+        },
+        "eblocpoa": {
+	    "host": "http://127.0.0.1:8545"
+        }	
     },
     "test":{
         "always_transact": true,
