--- a/.gitignore
+++ b/.gitignore
@@ -282,3 +282,5 @@ DAG/dot\.txt
 eBlocBroker\.egg-info/
 
 owncloudScripts/193f45652336791cef640eef9ee9cad9/
+
+contract/reports/coverage-170719\.json
