--- a/.gitignore
+++ b/.gitignore
@@ -284,3 +284,9 @@ eBlocBroker\.egg-info/
 owncloudScripts/193f45652336791cef640eef9ee9cad9/
 
 contract/reports/coverage-170719\.json
+
+contractCalls/\.submitJob\.py\.swp
+
+whisper/data.txt
+
+gdrive/exampleFolderToShare/sourceCode/.dataFiles.json
