--- a/contract/brownie-config.json
+++ b/contract/brownie-config.json
@@ -1,53 +1,57 @@
+// Brownie configuration file
+// https://eth-brownie.readthedocs.io/en/latest/config.html
 {
-    "network_defaults":{
-        "name": "development",
-        "persist": false,
-        "gas_limit": false,
-        "gas_price": false
-    },
-    "networks": {
-        "development": {
-            "test-rpc": "ganache-cli --port 8546 --allowUnlimitedContractSize --gasLimit 8000000",
-            "host": "http://127.0.0.1:8546"
+    "network": {
+        "default": "development", // the default network that brownie connects to
+        "settings": {
+            "broadcast_reverting_tx": false,
+            "gas_limit": false,
+            "gas_price": false
         },
-        "ropsten": {
-            "host": "https://ropsten.infura.io/",
-            "persist": true
-        },
-        "eblocpoa": {
-	    "host": "http://127.0.0.1:8545"
-        }	
-    },
-    "test":{
-        "always_transact": true,
-        "gas_limit": 8000000,
-        "default_contract_owner": false
-    },
-    "solc":{
-        "optimize": true,
-        "runs": 200,
-        "version": "0.5.7"
-    },
-    "logging": {
-        "test": {
-            "tx": 0,
-            "exc": [1, 2]
-
-        },
-        "run": {
-            "tx": [1, 2],
-            "exc": 2
-        },
-        "console": {
-            "tx": 1,
-            "exc": 2
-        },
-        "coverage": {
-            "tx": 0,
-            "exc": [1, 2]
+        "networks": { // any settings given here will replace the defaults
+            "development": {
+                "test_rpc": {
+                    "cmd": "ganache-cli --allowUnlimitedContractSize",
+                    "port": 8546,
+                    "gas_limit": 6721975,
+                    "accounts": 10,
+                    "evm_version": "petersburg",
+                    "mnemonic": "brownie"
+                },
+                "host": "http://127.0.0.1",
+                "broadcast_reverting_tx": true
+            },
+            // replace INFURA_PROJECT_ID with your personal API token
+            "goerli": {
+                "host": "https://goerli.infura.io/v3/INFURA_PROJECT_ID"
+            },
+            "kovan": {
+                "host": "https://kovan.infura.io/v3/INFURA_PROJECT_ID"
+            },
+            "rinkeby": {
+                "host": "https://rinkeby.infura.io/v3/INFURA_PROJECT_ID"
+            },
+            "ropsten": {
+                "host": "https://ropsten.infura.io/v3/INFURA_PROJECT_ID"
+            }
         }
     },
-    "colors":{
+    "pytest": { // these settings replace the defaults when running pytest
+        "gas_limit": 6721975,
+        "default_contract_owner": false,
+        "broadcast_reverting_tx": true,
+        "revert_traceback": false
+    },
+    "compiler": {
+        "solc": {
+            "version": null,
+            "evm_version": null,
+            "optimize": true,
+            "runs": 200,
+            "minify_source": false
+        }
+    },
+    "colors": {
         "key": "",
         "value": "bright blue",
         "callable": "bright cyan",
