--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ OC_USER=""
 GDRIVE=""
 RPC_PORT=8545
 POA_CHAIN=1
-IPFS_USE=0 # Should be "True", if caching into IPFS is open
-EUDAT_USE=0
+IPFS_USE=0  # Should be "True", if caching into IPFS  is open
+EUDAT_USE=0 # Should be "True", if caching into EUDAT is open
