--- a/.gitignore
+++ b/.gitignore
@@ -294,3 +294,7 @@ gdrive/exampleFolderToShare/sourceCode/.dataFiles.json
 gdrive/dataFiles.json
 
 gdrive/exampleFolderToShare/dataFiles.json
+
+todo.txt
+
+gdrive/exampleFolderToShare/sourceCode/dataFiles.json
