--- a/.gitignore
+++ b/.gitignore
@@ -298,3 +298,9 @@ gdrive/exampleFolderToShare/dataFiles.json
 todo.txt
 
 gdrive/exampleFolderToShare/sourceCode/dataFiles.json
+
+._eBlocBroker
+
+._README.md
+
+contract/abi.json
