--- a/contract/brownie-config.yaml
+++ b/contract/brownie-config.yaml
@@ -1,22 +1,27 @@
 # Brownie configuration file
-# https://eth-brownie.readthedocs.io/en/latest/config.html
+# https://eth-brownie.readthedocs.io/en/stable/config.html
 network:
     default: development # the default network that brownie connects to
     settings:
         gas_limit: false
-        gas_price: false
+        gas_price: 0
+        persist: true
         reverting_tx_gas_limit: false  # if false, reverting tx's will raise without broadcasting
     networks:
+        private:
+            host: http://127.0.0.1:8545/
+            persist: true
         # any settings given here will replace the defaults
         development:
             host: http://127.0.0.1
+            persist: false
             reverting_tx_gas_limit: 6721975
             test_rpc:
                 cmd: ganache-cli --allowUnlimitedContractSize
-                port: 8545
+                port: 8546
                 gas_limit: 6721975
                 accounts: 10
-                evm_version: petersburg
+                evm_version: istanbul
                 mnemonic: brownie
         # set your Infura API token to the environment variable WEB3_INFURA_PROJECT_ID
         mainnet:
@@ -37,8 +42,8 @@ pytest:
     revert_traceback: false
 compiler:
     solc:
-        version: 0.5.13
-        evm_version: null
+        version: 0.6.0
+        evm_version: istanbul
         optimize: true
         runs: 200
         minify_source: false
