--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,77 @@
+apipkg==1.5
+asttokens==2.0.3
 attrdict==2.0.1
+attrs==19.3.0
 base58==1.0.3
 certifi==2019.3.9
 chardet==3.0.4
 colored==1.3.93
 cycler==0.10.0
-cytoolz==0.9.0.1
+cytoolz==0.10.1
+docopt==0.6.2
+e==1.4.5
 -e .
-eth-abi==1.3.0
-eth-account==0.3.0
+eth-abi==2.1.0
+eth-account==0.4.0
+eth-brownie==1.5.1
+eth-event==0.2.2
 eth-hash==0.2.0
 eth-keyfile==0.5.1
 eth-keys==0.2.3
 eth-rlp==0.1.2
 eth-typing==2.1.0
-eth-utils==1.6.0
+eth-utils==1.8.4
+execnet==1.7.1
 hexbytes==0.2.0
 idna==2.8
+importlib-metadata==1.4.0
+inflection==0.3.1
+ipfshttpclient==0.4.12
+jsonschema==3.2.0
 kiwisolver==1.1.0
 lru-dict==1.1.6
 matplotlib==3.1.0
+more-itertools==8.1.0
+multiaddr==0.0.9
+mypy-extensions==0.4.3
+mythx-models==1.6.10
+netaddr==0.7.19
 numpy==1.16.4
+packaging==20.0
 parsimonious==0.8.1
+pluggy==0.13.1
+protobuf==3.11.2
+psutil==5.6.7
+py==1.8.1
 py-solc==3.2.0
+py-solc-ast==1.1.0
+py-solc-x==0.7.1
 pycryptodome==3.8.2
 pydot==1.4.1
+PyJWT==1.7.1
 pymongo==3.8.0
 pyocclient==0.4
 pyparsing==2.4.0
+pyrsistent==0.15.7
+pytest==5.3.2
+pytest-forked==1.1.3
+pytest-xdist==1.31.0
 python-dateutil==2.8.0
 python-dotenv==0.10.3
+pythx==1.4.1
+PyYAML==5.3
 requests==2.22.0
 rlp==1.1.0
+semantic-version==2.8.4
 six==1.12.0
 toolz==0.9.0
+tqdm==4.41.0
 typing==3.6.6
+typing-extensions==3.7.4.1
 urllib3==1.25.3
+varint==1.0.2
+vyper==0.1.0b16
+wcwidth==0.1.8
 web3==5.4.0
-websockets==6.0
+websockets==8.1
+zipp==2.0.0
