--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ OC_USER=""
 GDRIVE=""
 IPFS_USE=0  # Should be "1", if IPFS storage is in use
 EUDAT_USE=1  # Should be "1", if EUDAT storage is in use
+GDRIVE_USE=0 # Should be "1", if GDRIVE storage is in use
