--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
+WHOAMI=""
+SLURMUSER=""
+LOG_PATH=""
 RPC_PORT=8545
 POA_CHAIN=1
-WHOAMI=""
-LOG_PATH=""
 EBLOCPATH=""
 PROVIDER_ID=""
 OC_USER=""
 GDRIVE=""
-IPFS_USE=0  # Should be "1", if IPFS storage is in use
 EUDAT_USE=1  # Should be "1", if EUDAT storage is in use
+IPFS_USE=0  # Should be "1", if IPFS storage is in use
 GDRIVE_USE=0 # Should be "1", if GDRIVE storage is in use
