--- a/requirements.txt
+++ b/requirements.txt
@@ -5,16 +5,20 @@ attrdict==2.0.1
 attrs==19.3.0
 base58==2.0.0
 black==19.10b0
+Brownie==0.5.1
 certifi==2019.11.28
 chardet==3.0.4
 click==7.1.1
+colored==1.4.2
 cytoolz==0.10.1
 distlib==0.3.0
 e==1.4.5
--e git+https://github.com/ebloc/eBlocBroker.git@1218f84b4ebc26fa3c757d1052a2d1d92acaa772#egg=eBlocBroker
+-e .
 entrypoints==0.3
 eth-abi==2.1.1
 eth-account==0.4.0
+eth-brownie==1.6.8
+eth-event==0.2.2
 eth-hash==0.2.0
 eth-keyfile==0.5.1
 eth-keys==0.2.4
@@ -25,8 +29,10 @@ execnet==1.7.1
 filelock==3.0.12
 flake8==3.7.9
 hexbytes==0.2.0
+hypothesis==5.5.4
 idna==2.9
-importlib-metadata==1.5.0
+importlib-metadata==1.6.0
+importlib-resources==1.4.0
 inflection==0.3.1
 ipfshttpclient==0.4.12
 isort==4.3.21
@@ -47,7 +53,7 @@ protobuf==3.11.3
 psutil==5.7.0
 py==1.8.1
 py-solc-ast==1.2.1
-py-solc-x==0.8.0
+py-solc-x==0.8.1
 pycodestyle==2.5.0
 pycryptodome==3.9.7
 pyflakes==2.1.1
@@ -55,8 +61,8 @@ PyJWT==1.7.1
 pymongo==3.10.1
 pyocclient==0.4
 pyparsing==2.4.6
-pyrsistent==0.15.7
-pytest==5.3.5
+pyrsistent==0.16.0
+pytest==5.4.1
 pytest-forked==1.1.3
 pytest-xdist==1.31.0
 python-dateutil==2.8.1
@@ -74,12 +80,13 @@ toml==0.10.0
 toolz==0.10.0
 tqdm==4.43.0
 typed-ast==1.4.1
+typing==3.7.4.1
 typing-extensions==3.7.4.1
 urllib3==1.25.8
 varint==1.0.2
 virtualenv==20.0.10
-vyper==0.1.0b16
+vyper==0.1.0b17
 wcwidth==0.1.8
-web3==5.7.0
+web3==5.5.1
 websockets==8.1
 zipp==3.1.0
