--- a/requirements.txt
+++ b/requirements.txt
@@ -60,6 +60,7 @@ pyflakes==2.1.1
 PyJWT==1.7.1
 pymongo==3.10.1
 pyocclient==0.4
+pypandoc==1.4
 pyparsing==2.4.6
 pyrsistent==0.16.0
 pytest==5.4.1
