--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ certifi==2019.11.28
 chardet==3.0.4
 click==7.1.1
 colored==1.4.2
+coloredlogs==14.0
 cytoolz==0.10.1
 distlib==0.3.0
 e==1.4.5
@@ -28,7 +29,10 @@ eth-utils==1.8.4
 execnet==1.7.1
 filelock==3.0.12
 flake8==3.7.9
+gitdb==4.0.2
+GitPython==3.1.0
 hexbytes==0.2.0
+humanfriendly==8.1
 hypothesis==5.5.4
 idna==2.9
 importlib-metadata==1.6.0
@@ -75,6 +79,7 @@ requests==2.23.0
 rlp==1.2.0
 semantic-version==2.8.4
 six==1.14.0
+smmap==3.0.1
 sortedcontainers==2.1.0
 termcolor==1.1.0
 toml==0.10.0
