--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,11 @@ attrs==19.3.0
 base58==2.0.0
 black==19.10b0
 Brownie==0.5.1
-certifi==2019.11.28
+certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.1
 colored==1.4.2
+colored-traceback==0.3.0
 coloredlogs==14.0
 cytoolz==0.10.1
 distlib==0.3.0
@@ -18,7 +19,7 @@ e==1.4.5
 entrypoints==0.3
 eth-abi==2.1.1
 eth-account==0.4.0
-eth-brownie==1.6.8
+eth-brownie==1.6.9
 eth-event==0.2.2
 eth-hash==0.2.0
 eth-keyfile==0.5.1
@@ -56,16 +57,17 @@ pluggy==0.13.1
 protobuf==3.11.3
 psutil==5.7.0
 py==1.8.1
-py-solc-ast==1.2.1
+py-solc-ast==1.2.3
 py-solc-x==0.8.1
 pycodestyle==2.5.0
 pycryptodome==3.9.7
 pyflakes==2.1.1
+Pygments==2.6.1
 PyJWT==1.7.1
 pymongo==3.10.1
 pyocclient==0.4
 pypandoc==1.4
-pyparsing==2.4.6
+pyparsing==2.4.7
 pyrsistent==0.16.0
 pytest==5.4.1
 pytest-forked==1.1.3
@@ -73,7 +75,7 @@ pytest-xdist==1.31.0
 python-dateutil==2.8.1
 python-dotenv==0.12.0
 pythx==1.5.5
-PyYAML==5.3
+PyYAML==5.3.1
 regex==2020.2.20
 requests==2.23.0
 rlp==1.2.0
@@ -87,12 +89,12 @@ toolz==0.10.0
 tqdm==4.43.0
 typed-ast==1.4.1
 typing==3.7.4.1
-typing-extensions==3.7.4.1
+typing-extensions==3.7.4.2
 urllib3==1.25.8
 varint==1.0.2
 virtualenv==20.0.10
 vyper==0.1.0b17
-wcwidth==0.1.8
+wcwidth==0.1.9
 web3==5.5.1
 websockets==8.1
 zipp==3.1.0
