--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,14 +10,14 @@ repos:
       - id: isort
 
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.780
+    rev: v0.782
     hooks:
     -   id: mypy
         verbose: true
         entry: bash -c 'mypy "$@" || true' --
 
 -   repo: https://github.com/psf/black
-    rev: 19.10b0
+    rev: 2471b9256d9d9dfea1124d20072201693b9b0865
     hooks:
       - id: black
         name: black
