--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,17 @@ asttokens==2.0.3
 attrdict==2.0.1
 attrs==19.3.0
 base58==2.0.0
+bcrypt==3.1.7
 bitarray==1.2.2
-black==19.10b0
+black @ git+git://github.com/psf/black@2471b9256d9d9dfea1124d20072201693b9b0865
+bleach==3.1.5
 cached-property==1.5.1
 certifi==2020.4.5.1
 cffi==1.14.0
 cfgv==3.1.0
 chardet==3.0.4
 click==7.1.1
+colorama==0.4.3
 colored==1.4.2
 colored-traceback==0.3.0
 coloredlogs==14.0
@@ -21,8 +24,7 @@ cryptography==2.9
 cytoolz==0.10.1
 distlib==0.3.0
 docutils==0.16
-e==1.4.5
--e .
+e .
 entrypoints==0.3
 eth-abi==2.1.1
 eth-account==0.5.2
@@ -37,10 +39,12 @@ eth-utils==1.9.0
 execnet==1.7.1
 ezenv==0.91
 filelock==3.0.12
-flake8==3.7.9
+flake8==3.8.3
 flake8-mypy==17.8.0
+Flask==1.1.2
 gitdb==4.0.2
 GitPython==3.1.0
+gunicorn==20.0.4
 hexbytes==0.2.0
 humanfriendly==8.1
 hypothesis==5.15.0
@@ -49,25 +53,32 @@ idna==2.9
 importlib-metadata==1.6.0
 importlib-resources==1.4.0
 inflection==0.4.0
-ipfshttpclient==0.4.13.2
+ipfshttpclient==0.6.0.post1
 isort==4.3.21
+itsdangerous==1.1.0
+jeepney==0.4.3
+Jinja2==2.11.2
 jsonschema==3.2.0
+keyring==21.2.1
 lazy-object-proxy==1.4.3
 lockfile==0.12.2
 lru-dict==1.1.6
+MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==8.2.0
 multiaddr==0.0.9
-mypy==0.780
+mypy==0.782
 mypy-extensions==0.4.3
 mythx-models==1.7.4
 netaddr==0.7.19
 ng==1.2.0
 nodeenv==1.4.0
 packaging==20.3
+paramiko==2.7.1
 parsimonious==0.8.1
 pathspec==0.7.0
 pkg-resources==0.0.0
+pkginfo==1.5.0.1
 pluggy==0.13.1
 pre-commit==2.5.1
 prompt-toolkit==3.0.5
@@ -76,14 +87,17 @@ psutil==5.7.0
 py==1.8.1
 py-solc-ast==1.2.4
 py-solc-x==0.8.2
-pycodestyle==2.5.0
+pycodestyle==2.6.0
 pycparser==2.20
 pycryptodome==3.9.7
-pyflakes==2.1.1
+pyflakes==2.2.0
 Pygments==2.6.1
 PyJWT==1.7.1
 pylint==2.5.2
 pymongo==3.10.1
+pymy==0.0.8
+PyMySQL==0.9.3
+PyNaCl==1.4.0
 pyocclient==0.4
 pyOpenSSL==19.1.0
 pypandoc==1.4
@@ -94,21 +108,29 @@ pytest-forked==1.1.3
 pytest-xdist==1.32.0
 python-daemon==2.2.4
 python-dateutil==2.8.1
-python-dotenv==0.12.0
+python-dotenv==0.13.0
 pythx==1.5.7
 PyYAML==5.3.1
+readme-renderer==26.0
 regex==2020.2.20
 requests==2.23.0
+requests-toolbelt==0.9.1
+rfc3986==1.4.0
 rlp==1.2.0
+SecretStorage==3.1.2
 seed-isort-config==2.2.0
 semantic-version==2.8.5
+sexpdata==0.0.3
 six==1.14.0
 smmap==3.0.1
 sortedcontainers==2.1.0
+sshtunnel==0.1.4
 termcolor==1.1.0
 toml==0.10.0
 toolz==0.10.0
+tox==3.15.2
 tqdm==4.46.0
+twine==3.2.0
 typed-ast==1.4.1
 typing==3.7.4.1
 typing-extensions==3.7.4.2
@@ -118,6 +140,9 @@ virtualenv==20.0.10
 vyper==0.1.0b17
 wcwidth==0.1.9
 web3==5.11.0
+webencodings==0.5.1
 websockets==8.1
+Werkzeug==1.0.1
 wrapt==1.12.1
+WTForms==2.3.1
 zipp==3.1.0
