--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ astroid==2.4.0
 asttokens==2.0.3
 attrdict==2.0.1
 attrs==19.3.0
-base58==2.0.0
+backcall==0.2.0
+base58==1.0.3
 bcrypt==3.1.7
 bitarray==1.2.2
 black @ git+git://github.com/psf/black@2471b9256d9d9dfea1124d20072201693b9b0865
@@ -22,13 +23,15 @@ colored-traceback==0.3.0
 coloredlogs==14.0
 cryptography==2.9
 cytoolz==0.10.1
+daemon==1.2
+decorator==4.4.2
 distlib==0.3.0
 docutils==0.16
 e .
 entrypoints==0.3
 eth-abi==2.1.1
 eth-account==0.5.2
-eth-brownie==1.8.9
+eth-brownie==1.9.7
 eth-event==1.1.0
 eth-hash==0.2.0
 eth-keyfile==0.5.1
@@ -45,17 +48,21 @@ Flask==1.1.2
 gitdb==4.0.2
 GitPython==3.1.0
 gunicorn==20.0.4
-hexbytes==0.2.0
+hexbytes==0.2.1
 humanfriendly==8.1
-hypothesis==5.15.0
+hypothesis==5.19.0
 identify==1.4.19
 idna==2.9
 importlib-metadata==1.6.0
 importlib-resources==1.4.0
-inflection==0.4.0
+inflection==0.5.0
+ipdb==0.13.3
 ipfshttpclient==0.6.0.post1
+ipython==7.16.1
+ipython-genutils==0.2.0
 isort==4.3.21
 itsdangerous==1.1.0
+jedi==0.17.1
 jeepney==0.4.3
 Jinja2==2.11.2
 jsonschema==3.2.0
@@ -66,17 +73,22 @@ lru-dict==1.1.6
 MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==8.2.0
+morphys==1.0
 multiaddr==0.0.9
+multihash==0.1.1
 mypy==0.782
 mypy-extensions==0.4.3
-mythx-models==1.7.4
+mythx-models==1.9.1
 netaddr==0.7.19
 ng==1.2.0
 nodeenv==1.4.0
 packaging==20.3
 paramiko==2.7.1
 parsimonious==0.8.1
+parso==0.7.0
 pathspec==0.7.0
+pexpect==4.8.0
+pickleshare==0.7.5
 pkg-resources==0.0.0
 pkginfo==1.5.0.1
 pluggy==0.13.1
@@ -84,9 +96,14 @@ pre-commit==2.5.1
 prompt-toolkit==3.0.5
 protobuf==3.11.3
 psutil==5.7.0
+ptyprocess==0.6.0
 py==1.8.1
+py-cid==0.3.0
+py-multibase==1.0.1
+py-multicodec==0.2.1
+py-multihash==0.2.3
 py-solc-ast==1.2.4
-py-solc-x==0.8.2
+py-solc-x==0.10.0
 pycodestyle==2.6.0
 pycparser==2.20
 pycryptodome==3.9.7
@@ -103,13 +120,14 @@ pyOpenSSL==19.1.0
 pypandoc==1.4
 pyparsing==2.4.7
 pyrsistent==0.16.0
-pytest==5.4.2
+pytest==5.4.3
 pytest-forked==1.1.3
 pytest-xdist==1.32.0
+python-baseconv==1.2.2
 python-daemon==2.2.4
 python-dateutil==2.8.1
 python-dotenv==0.13.0
-pythx==1.5.7
+pythx==1.6.1
 PyYAML==5.3.1
 readme-renderer==26.0
 regex==2020.2.20
@@ -117,6 +135,8 @@ requests==2.23.0
 requests-toolbelt==0.9.1
 rfc3986==1.4.0
 rlp==1.2.0
+rope==0.17.0
+ropemode==0.5
 SecretStorage==3.1.2
 seed-isort-config==2.2.0
 semantic-version==2.8.5
@@ -125,11 +145,13 @@ six==1.14.0
 smmap==3.0.1
 sortedcontainers==2.1.0
 sshtunnel==0.1.4
+sudo==1.0.0
 termcolor==1.1.0
 toml==0.10.0
 toolz==0.10.0
 tox==3.15.2
-tqdm==4.46.0
+tqdm==4.46.1
+traitlets==4.3.3
 twine==3.2.0
 typed-ast==1.4.1
 typing==3.7.4.1
@@ -137,9 +159,9 @@ typing-extensions==3.7.4.2
 urllib3==1.25.9
 varint==1.0.2
 virtualenv==20.0.10
-vyper==0.1.0b17
+vyper==0.2.2
 wcwidth==0.1.9
-web3==5.11.0
+web3==5.11.1
 webencodings==0.5.1
 websockets==8.1
 Werkzeug==1.0.1
