Implement Daemon in Python way
- Add lockfile to handle Daemon scripts

- Add terminate/reload/start options to the Daemon

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
+grep
+
 doo.py
+
+*~
 
 doo
 
@@ -404,6 +408,7 @@ ipython_config.py
 #   However, in case of collaboration, if having platform-specific dependencies or dependencies
 #   having no cross-platform support, pipenv may install dependencies that don't work, or not
 #   install all needed dependencies.
+
 #Pipfile.lock
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
@@ -473,4 +478,12 @@ flycheck_*
 
 cd
 
+.emacs-buffers
+
+.emacs.desktop
+
+selected
+
 .*~
+
+gethServer.out
