--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
 AccessControl==4.2
 Acquisition==4.6
 apipkg==1.5
-appdirs==1.4.3
+appdirs==1.4.4
+APScheduler==3.6.3
 aspy.refactor-imports==2.1.1
 astroid==2.4.0
 asttokens==2.0.3
 attrdict==2.0.1
-attrs==19.3.0
+attrs==20.2.0
 AuthEncoding==4.1
+autobahn==20.7.1
+Automat==20.2.0
 backcall==0.2.0
-base58==1.0.3
+base58==2.0.1
 bcrypt==3.1.7
 beautifulsoup4==4.9.1
 bitarray==1.2.2
@@ -17,31 +20,32 @@ black==19.10b0
 bleach==3.1.5
 BTrees==4.7.2
 cached-property==1.5.1
-certifi==2020.4.5.1
+certifi==2020.6.20
 cffi==1.14.0
 cfgv==3.1.0
 Chameleon==3.8.1
 chardet==3.0.4
-click==7.1.1
+click==7.1.2
 colorama==0.4.3
 colored==1.4.2
 colored-traceback==0.3.0
 coloredlogs==14.0
-cryptography==3.2
-cytoolz==0.10.1
+constantly==15.1.0
+cryptography==2.9
+cytoolz==0.11.0
 daemon==1.2
+dateparser==0.7.6
 decorator==4.4.2
 distlib==0.3.0
 docutils==0.16
--e git+https://github.com/ebloc/eBlocBroker.git@6dde9e8f755f73d0112580ad0845c40f8140cd65#egg=eBlocBroker
 entrypoints==0.3
 eth-abi==2.1.1
-eth-account==0.5.4
+eth-account==0.5.2
 eth-event==1.2.0
 eth-hash==0.2.0
 eth-keys==0.2.4
 eth-rlp==0.1.2
-eth-typing==2.2.1
+eth-typing==2.2.2
 eth-utils==1.9.5
 execnet==1.7.1
 ExtensionClass==4.4
@@ -55,15 +59,17 @@ GitPython==3.1.0
 gunicorn==20.0.4
 hexbytes==0.2.1
 humanfriendly==8.1
+hyperlink==20.0.1
 hypothesis==5.35.0
 identify==1.4.19
-idna==2.9
-importlib-metadata==1.6.0
+idna==2.10
+importlib-metadata==2.0.0
 importlib-resources==1.4.0
+incremental==17.5.0
 inflection==0.5.0
 iniconfig==1.0.1
 ipdb==0.13.3
-ipfshttpclient==0.6.0.post1
+ipfshttpclient==0.6.1
 ipython==7.16.1
 ipython-genutils==0.2.0
 isort==4.3.21
@@ -71,12 +77,14 @@ itsdangerous==1.1.0
 jedi==0.17.1
 jeepney==0.4.3
 Jinja2==2.11.2
+jq==1.0.2
 jsonschema==3.2.0
 keyring==21.2.1
 lazy-object-proxy==1.4.3
 lru-dict==1.1.6
+lxml==4.5.2
 mercurial==5.4.2
-more-itertools==8.2.0
+more-itertools==8.5.0
 morphys==1.0
 multiaddr==0.0.9
 multihash==0.1.1
@@ -84,59 +92,64 @@ MultiMapping==4.1
 mypy==0.782
 mypy-extensions==0.4.3
 mythx-models==1.9.1
-netaddr==0.7.19
+netaddr==0.8.0
 ng==1.2.0
 nodeenv==1.4.0
-packaging==20.3
+packaging==20.4
 paramiko==2.7.1
 parsimonious==0.8.1
 parso==0.7.0
 PasteDeploy==2.1.0
-pathspec==0.7.0
+pathspec==0.8.0
 persistent==4.6.4
 pexpect==4.8.0
 pkginfo==1.5.0.1
 pluggy==0.13.1
 pre-commit==2.5.1
+progress==1.5
 prompt-toolkit==3.0.7
 protobuf==3.11.3
 psutil==5.7.2
 ptyprocess==0.6.0
-py==1.8.1
+py==1.9.0
 py-cid==0.3.0
 py-multicodec==0.2.1
 py-multihash==0.2.3
 py-solc-ast==1.2.5
 py-solc-x==1.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.20
 pyflakes==2.2.0
 Pygments==2.6.1
 pygments-lexer-solidity==0.5.1
+PyHamcrest==2.0.2
 PyJWT==1.7.1
 pylint==2.5.2
-pymongo==3.11.0
+pymongo==3.10.1
 pymy==0.0.8
 PyMySQL==0.9.3
 PyNaCl==1.4.0
-pyocclient==0.6
+pyocclient==0.4
 pyOpenSSL==19.1.0
 pypandoc==1.4
 pyparsing==2.4.7
 pyrsistent==0.16.0
 pytest==6.0.1
-pytest-forked==1.1.3
+pytest-forked==1.3.0
 pytest-xdist==1.34.0
 python-baseconv==1.2.2
 python-daemon==2.2.4
 python-dateutil==2.8.1
-python-dotenv==0.14.0
+python-dotenv==0.13.0
 python-gettext==4.0
+python-telegram-bot==13.0
 pythx==1.6.1
 pytz==2020.1
 PyYAML==5.3.1
 readme-renderer==26.0
-regex==2020.2.20
-requests==2.23.0
+regex==2020.7.14
+requests==2.24.0
 requests-toolbelt==0.9.1
 RestrictedPython==5.0
 rfc3986==1.4.0
@@ -145,29 +158,35 @@ roman==3.3
 -e git+https://github.com/python-rope/ropemacs.git@b054227a2225b4b796c26ba39340fd50157956cb#egg=ropemacs
 seed-isort-config==2.2.0
 semantic-version==2.8.5
+service-identity==18.1.0
 sexpdata==0.0.3
-six==1.14.0
+six==1.15.0
 smmap==3.0.1
-sortedcontainers==2.1.0
+sortedcontainers==2.2.2
 sshtunnel==0.1.4
 sudo==1.0.0
+telegram-send==0.25
 termcolor==1.1.0
-toml==0.10.0
-toolz==0.10.0
+toml==0.10.1
+toolz==0.11.0
+tornado==6.0.4
 tox==3.15.2
 tqdm==4.48.2
 traitlets==4.3.3
 transaction==3.0.0
+Twisted==20.3.0
+txaio==20.4.1
 typed-ast==1.4.1
 typing-extensions==3.7.4.2
-urllib3==1.25.9
+tzlocal==2.1
+urllib3==1.25.11
 varint==1.0.2
 virtualenv==20.0.10
-vvm==0.1.0
-vyper==0.2.5
+vvm==0.0.2
+vyper==0.2.2
 waitress==1.4.4
-wcwidth==0.1.9
-web3==5.12.2
+wcwidth==0.2.5
+web3==5.11.1
 webencodings==0.5.1
 WebOb==1.8.6
 websockets==8.1
@@ -179,5 +198,5 @@ WTForms==2.3.1
 z3c.pt==3.3.0
 ZConfig==3.5.0
 zExceptions==4.1
-zipp==3.1.0
+zipp==3.2.0
 ZODB==5.6.0
