Update solc version for `0.7.0` as for the contract

--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ EBLOCPATH=""
 PROVIDER_ID=""
 OC_USER=""
 GDRIVE=""
-EUDAT_USE=1  # Should be "1", if EUDAT storage is in use
-IPFS_USE=0  # Should be "1", if IPFS storage is in use
-GDRIVE_USE=0 # Should be "1", if GDRIVE storage is in use
+# Should be "True" if storage in use, "False" if not.
+IPFS_USE=True
+EUDAT_USE=False
+GDRIVE_USE=False
