--- a/requirements.txt
+++ b/requirements.txt
@@ -1,219 +1,30 @@
-AccessControl==4.2
-Acquisition==4.6
-apipkg==1.5
-appdirs==1.4.4
-aspy.refactor-imports==2.1.1
-astroid==2.4.0
-asttokens==2.0.3
-attrdict==2.0.1
-attrs==20.2.0
-AuthEncoding==4.1
-autobahn==20.7.1
-Automat==20.2.0
-backcall==0.2.0
-base58==1.0.3
-bcrypt==3.1.7
-beautifulsoup4==4.9.1
-bitarray==1.2.2
-black==19.10b0
-bleach==3.1.5
-BTrees==4.7.2
-cached-property==1.5.1
-certifi==2020.6.20
-cffi==1.14.0
-cfgv==3.1.0
-Chameleon==3.8.1
-chardet==3.0.4
-click==7.1.2
-colorama==0.4.3
-colored==1.4.2
-colored-traceback==0.3.0
-coloredlogs==14.0
-constantly==15.1.0
-cryptography==2.9
-cytoolz==0.11.0
-daemon==1.2
-dateparser==0.7.6
-decorator==4.4.2
-distlib==0.3.0
-docutils==0.16
+asn1crypto==0.24.0
+configparser==3.5.0b2
+contextlib2==0.6.0.post1
+cryptography==2.6.1
+dbus-python==1.2.12
 entrypoints==0.3
-eth-abi==2.1.1
-eth-account==0.5.2
-eth-event==1.2.0
-eth-hash==0.2.0
-eth-keys==0.2.4
-eth-rlp==0.1.2
-eth-typing==2.2.2
-eth-utils==1.9.5
-execnet==1.7.1
-ExtensionClass==4.4
-ezenv==0.91
-filelock==3.0.12
-flake8==3.8.3
-flake8-mypy==17.8.0
-Flask==1.1.2
-gitdb==4.0.2
-GitPython==3.1.0
-gunicorn==20.0.4
-hexbytes==0.2.1
-humanfriendly==8.1
-hyperlink==20.0.1
-hypothesis==5.35.0
-identify==1.4.19
-idna==2.10
+enum34==1.1.6
+flake8==3.8.4
+functools32==3.2.3.post2
+futures==3.3.0
+greenlet==0.4.15
+gyp==0.1
 importlib-metadata==2.0.0
-importlib-resources==1.4.0
-incremental==17.5.0
-inflection==0.5.0
-iniconfig==1.0.1
-ipdb==0.13.3
-ipfshttpclient==0.6.0.post1
-ipython==7.16.1
-ipython-genutils==0.2.0
-isort==4.3.21
-itsdangerous==1.1.0
-jedi==0.17.1
-jeepney==0.4.3
-Jinja2==2.11.2
-jq==1.0.2
-jsonschema==3.2.0
-keyring==21.2.1
-lazy-object-proxy==1.4.3
-lru-dict==1.1.6
-lxml==4.5.2
-mercurial==5.4.2
-more-itertools==8.5.0
-morphys==1.0
-multiaddr==0.0.9
-multihash==0.1.1
-MultiMapping==4.1
-mypy==0.782
-mypy-extensions==0.4.3
-mythx-models==1.9.1
-netaddr==0.7.19
-ng==1.2.0
-nodeenv==1.4.0
-packaging==20.4
-paramiko==2.7.1
-parsimonious==0.8.1
-parso==0.7.0
-PasteDeploy==2.1.0
-pathspec==0.8.0
-persistent==4.6.4
-pexpect==4.8.0
-pkginfo==1.5.0.1
-pluggy==0.13.1
-pre-commit==2.5.1
-progress==1.5
-prompt-toolkit==3.0.7
-protobuf==3.11.3
-psutil==5.7.2
-ptyprocess==0.6.0
-py==1.9.0
-py-cid==0.3.0
-py-multicodec==0.2.1
-py-multihash==0.2.3
-py-solc-ast==1.2.5
-py-solc-x==1.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
+ipaddress==1.0.17
+keyring==18.0.1
+keyrings.alt==3.1.1
+msgpack==0.5.6
+neovim==0.3.0
+pathlib2==2.3.5
+pycrypto==2.6.1
 pyflakes==2.2.0
-Pygments==2.6.1
-pygments-lexer-solidity==0.5.1
-PyHamcrest==2.0.2
-PyJWT==1.7.1
-pylint==2.5.2
-pymongo==3.10.1
-pymy==0.0.8
-PyMySQL==0.9.3
-PyNaCl==1.4.0
-pyocclient==0.4
-pyOpenSSL==19.1.0
-pypandoc==1.4
-pyparsing==2.4.7
-pyrsistent==0.16.0
-pytest==6.0.1
-pytest-forked==1.3.0
-pytest-xdist==1.34.0
-python-baseconv==1.2.2
-python-daemon==2.2.4
-python-dateutil==2.8.1
-python-dotenv==0.13.0
-python-gettext==4.0
-pythx==1.6.1
-pytz==2020.1
-PyYAML==5.3.1
-readme-renderer==26.0
-regex==2020.7.14
-requests==2.24.0
-requests-toolbelt==0.9.1
-RestrictedPython==5.0
-rfc3986==1.4.0
-rlp==1.2.0
-roman==3.3
--e git+https://github.com/python-rope/ropemacs.git@b054227a2225b4b796c26ba39340fd50157956cb#egg=ropemacs
-seed-isort-config==2.2.0
-semantic-version==2.8.5
-service-identity==18.1.0
-sexpdata==0.0.3
-six==1.15.0
-smmap==3.0.1
-sortedcontainers==2.2.2
-sshtunnel==0.1.4
-sudo==1.0.0
-termcolor==1.1.0
-toml==0.10.1
-toolz==0.11.0
-tox==3.15.2
-tqdm==4.48.2
-traitlets==4.3.3
-transaction==3.0.0
-Twisted==20.3.0
-txaio==20.4.1
-typed-ast==1.4.1
-typing==3.7.4.1
-typing-extensions==3.7.4.2
-tzlocal==2.1
-urllib3==1.25.10
-varint==1.0.2
-virtualenv==20.0.10
-vvm==0.0.2
-vyper==0.2.2
-waitress==1.4.4
-wcwidth==0.2.5
-web3==5.11.1
-webencodings==0.5.1
-WebOb==1.8.6
-websockets==8.1
-WebTest==2.0.35
-Werkzeug==1.0.1
-wrapt==1.12.1
-WSGIProxy2==0.4.6
-WTForms==2.3.1
-z3c.pt==3.3.0
-ZConfig==3.5.0
-zExceptions==4.1
-zipp==3.2.0
-ZODB==5.6.0
-zope.browser==2.3
-zope.component==4.6.2
-zope.configuration==4.4.0
-zope.contentprovider==4.2.1
-zope.deferredimport==4.3.1
-zope.deprecation==4.4.0
-zope.event==4.4
-zope.exceptions==4.4
-zope.i18n==4.7.0
-zope.i18nmessageid==5.0.1
-zope.location==4.2
-zope.proxy==4.3.5
-zope.publisher==5.2.1
-zope.schema==6.0.0
-zope.security==5.1.1
-zope.sequencesort==4.1.2
-zope.structuredtext==4.3
-zope.tales==5.1
-zope.testing==4.7
-zope.traversing==4.4.1
+PyGObject==3.34.0
+Pymacs==0.25
+pyxdg==0.25
+scandir==1.10.0
+sip==4.19.18
+six==1.12.0
+trollius==2.0.1
+typing==3.7.4.3
+zipp==1.2.0
