Updated related to improvements:
- Print colorful "[ ok ]" string

- Change naming for `create_dir` to `mkdir`

- Fix eudat upload in the end.py; fix the upload naming of the file

- Handle `==>` as blue color and `E:` as red color during print

--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,6 @@ doo
 
 nohup.*
 
-*.py
-
 *.*~
 
 foo\.py
@@ -319,3 +317,7 @@ owncloudScripts/base/data_link/
 .oc.pckl
 
 .idea/
+
+doo.*
+
+gdown.py/gdown.*
