--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,10 @@ apipkg==1.5
 appdirs==1.4.3
 aspy.refactor-imports==2.1.1
 astroid==2.4.0
-asttokens==2.0.3
+asttokens==2.0.4
 attrdict==2.0.1
 attrs==19.3.0
 AuthEncoding==4.1
-autobahn==20.7.1
-Automat==20.2.0
 backcall==0.2.0
 base58==1.0.3
 bcrypt==3.1.7
@@ -17,7 +15,6 @@ beautifulsoup4==4.9.1
 bitarray==1.2.2
 black==19.10b0
 bleach==3.1.5
-bs4==0.0.1
 BTrees==4.7.2
 cached-property==1.5.1
 certifi==2020.4.5.1
@@ -30,17 +27,15 @@ colorama==0.4.3
 colored==1.4.2
 colored-traceback==0.3.0
 coloredlogs==14.0
-constantly==15.1.0
-cryptography==3.2
+cryptography==3.2.1
 cytoolz==0.10.1
 daemon==1.2
-dateparser==1.0.0
 decorator==4.4.2
 distlib==0.3.0
 docutils==0.16
 entrypoints==0.3
 eth-abi==2.1.1
-eth-account==0.5.2
+eth-account==0.5.4
 eth-event==1.2.0
 eth-hash==0.2.0
 eth-keys==0.2.4
@@ -54,18 +49,18 @@ filelock==3.0.12
 flake8==3.8.3
 flake8-mypy==17.8.0
 Flask==1.1.2
+gdown==3.12.2
 gitdb==4.0.2
 GitPython==3.1.0
+gshell==5.5.2
 gunicorn==20.0.4
 hexbytes==0.2.1
 humanfriendly==8.1
-hyperlink==20.0.1
-hypothesis==5.35.0
+hypothesis==5.41.3
 identify==1.4.19
 idna==2.9
 importlib-metadata==1.6.0
 importlib-resources==1.4.0
-incremental==17.5.0
 inflection==0.5.0
 iniconfig==1.0.1
 ipdb==0.13.3
@@ -87,7 +82,7 @@ morphys==1.0
 multiaddr==0.0.9
 multihash==0.1.1
 MultiMapping==4.1
-mypy==0.790
+mypy==0.782
 mypy-extensions==0.4.3
 mythx-models==1.9.1
 netaddr==0.7.19
@@ -101,26 +96,24 @@ PasteDeploy==2.1.0
 pathspec==0.7.0
 persistent==4.6.4
 pexpect==4.8.0
+pi==0.1.2
 pkginfo==1.5.0.1
 pluggy==0.13.1
 pre-commit==2.5.1
-prompt-toolkit==3.0.7
+prompt-toolkit==3.0.8
 protobuf==3.11.3
-psutil==5.7.2
+psutil==5.7.3
 ptyprocess==0.6.0
-py==1.8.1
+py==1.10.0
 py-cid==0.3.0
 py-multicodec==0.2.1
 py-multihash==0.2.3
-py-solc-ast==1.2.5
-py-solc-x==1.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
+py-solc-ast==1.2.6
+py-solc-x==1.0.1
 pycparser==2.20
 pyflakes==2.2.0
 Pygments==2.6.1
 pygments-lexer-solidity==0.5.1
-PyHamcrest==2.0.2
 PyJWT==1.7.1
 pylint==2.5.2
 pymongo==3.11.0
@@ -132,6 +125,7 @@ pyOpenSSL==19.1.0
 pypandoc==1.4
 pyparsing==2.4.7
 pyrsistent==0.16.0
+PySocks==1.7.1
 pytest==6.0.1
 pytest-forked==1.1.3
 pytest-xdist==1.34.0
@@ -145,7 +139,7 @@ pytz==2020.1
 PyYAML==5.3.1
 readme-renderer==26.0
 regex==2020.2.20
-requests==2.23.0
+requests==2.25.0
 requests-toolbelt==0.9.1
 RestrictedPython==5.0
 rfc3986==1.4.0
@@ -154,7 +148,6 @@ roman==3.3
 -e git+https://github.com/python-rope/ropemacs.git@b054227a2225b4b796c26ba39340fd50157956cb#egg=ropemacs
 seed-isort-config==2.2.0
 semantic-version==2.8.5
-service-identity==18.1.0
 sexpdata==0.0.3
 six==1.14.0
 smmap==3.0.1
@@ -165,22 +158,19 @@ termcolor==1.1.0
 toml==0.10.0
 toolz==0.10.0
 tox==3.15.2
-tqdm==4.48.2
+tqdm==4.53.0
 traitlets==4.3.3
 transaction==3.0.0
-Twisted==20.3.0
-txaio==20.4.1
 typed-ast==1.4.1
 typing-extensions==3.7.4.2
-tzlocal==2.1
 urllib3==1.25.9
 varint==1.0.2
 virtualenv==20.0.10
 vvm==0.1.0
-vyper==0.2.7
+vyper==0.2.8
 waitress==1.4.4
 wcwidth==0.1.9
-web3==5.13.0
+web3==5.13.1
 webencodings==0.5.1
 WebOb==1.8.6
 websockets==8.1
