--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ asttokens==2.0.4
 attrdict==2.0.1
 attrs==19.3.0
 AuthEncoding==4.1
+autobahn==20.12.3
+Automat==20.2.0
 backcall==0.2.0
 base58==1.0.3
 bcrypt==3.1.7
@@ -27,15 +29,20 @@ colorama==0.4.3
 colored==1.4.2
 colored-traceback==0.3.0
 coloredlogs==14.0
+constantly==15.1.0
 cryptography==3.2.1
+cycler==0.10.0
 cytoolz==0.10.1
 daemon==1.2
+dateparser==1.0.0
+dbfread==2.0.4
 decorator==4.4.2
 distlib==0.3.0
 docutils==0.16
+-e git+https://github.com/ebloc/eBlocBroker.git@005349f3b17c1c09a976ecdfab516739c298ecb4#egg=eBlocBroker
 entrypoints==0.3
 eth-abi==2.1.1
-eth-account==0.5.4
+eth-account==0.5.2
 eth-event==1.2.0
 eth-hash==0.2.0
 eth-keys==0.2.4
@@ -56,11 +63,14 @@ gshell==5.5.2
 gunicorn==20.0.4
 hexbytes==0.2.1
 humanfriendly==8.1
+hyperlink==20.0.1
 hypothesis==5.41.3
 identify==1.4.19
 idna==2.9
+ijson==2.6.1
 importlib-metadata==1.6.0
 importlib-resources==1.4.0
+incremental==17.5.0
 inflection==0.5.0
 iniconfig==1.0.1
 ipdb==0.13.3
@@ -74,9 +84,13 @@ jeepney==0.4.3
 Jinja2==2.11.2
 jsonschema==3.2.0
 keyring==21.2.1
+kiwisolver==1.3.1
 lazy-object-proxy==1.4.3
+lmdb==1.0.0
 lru-dict==1.1.6
+matplotlib==3.3.3
 mercurial==5.4.2
+meza==0.42.5
 more-itertools==8.2.0
 morphys==1.0
 multiaddr==0.0.9
@@ -88,6 +102,7 @@ mythx-models==1.9.1
 netaddr==0.7.19
 ng==1.2.0
 nodeenv==1.4.0
+numpy==1.19.4
 packaging==20.3
 paramiko==2.7.1
 parsimonious==0.8.1
@@ -97,6 +112,7 @@ pathspec==0.7.0
 persistent==4.6.4
 pexpect==4.8.0
 pi==0.1.2
+Pillow==8.0.1
 pkginfo==1.5.0.1
 pluggy==0.13.1
 pre-commit==2.5.1
@@ -110,10 +126,14 @@ py-multicodec==0.2.1
 py-multihash==0.2.3
 py-solc-ast==1.2.6
 py-solc-x==1.0.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.20
 pyflakes==2.2.0
 Pygments==2.6.1
 pygments-lexer-solidity==0.5.1
+pygogo==0.13.2
+PyHamcrest==2.0.2
 PyJWT==1.7.1
 pylint==2.5.2
 pymongo==3.11.0
@@ -125,6 +145,7 @@ pyOpenSSL==19.1.0
 pypandoc==1.4
 pyparsing==2.4.7
 pyrsistent==0.16.0
+PySimpleGUI==4.33.0
 PySocks==1.7.1
 pytest==6.0.1
 pytest-forked==1.1.3
@@ -134,6 +155,7 @@ python-daemon==2.2.4
 python-dateutil==2.8.1
 python-dotenv==0.14.0
 python-gettext==4.0
+python-slugify==1.2.6
 pythx==1.6.1
 pytz==2020.1
 PyYAML==5.3.1
@@ -148,6 +170,7 @@ roman==3.3
 -e git+https://github.com/python-rope/ropemacs.git@b054227a2225b4b796c26ba39340fd50157956cb#egg=ropemacs
 seed-isort-config==2.2.0
 semantic-version==2.8.5
+service-identity==18.1.0
 sexpdata==0.0.3
 six==1.14.0
 smmap==3.0.1
@@ -155,14 +178,18 @@ sortedcontainers==2.1.0
 sshtunnel==0.1.4
 sudo==1.0.0
 termcolor==1.1.0
+tk==0.1.0
 toml==0.10.0
 toolz==0.10.0
 tox==3.15.2
 tqdm==4.53.0
 traitlets==4.3.3
 transaction==3.0.0
+Twisted==20.3.0
+txaio==20.12.1
 typed-ast==1.4.1
 typing-extensions==3.7.4.2
+tzlocal==2.1
 urllib3==1.25.9
 varint==1.0.2
 virtualenv==20.0.10
@@ -170,7 +197,7 @@ vvm==0.1.0
 vyper==0.2.8
 waitress==1.4.4
 wcwidth==0.1.9
-web3==5.13.1
+web3==5.11.1
 webencodings==0.5.1
 WebOb==1.8.6
 websockets==8.1
@@ -179,6 +206,7 @@ Werkzeug==1.0.1
 wrapt==1.12.1
 WSGIProxy2==0.4.6
 WTForms==2.3.1
+xlrd==1.2.0
 z3c.pt==3.3.0
 ZConfig==3.5.0
 zExceptions==4.1
