Improve yaml for job submittion.

--- a/_slurm/confs/slurm.conf
+++ b/_slurm/confs/slurm.conf
@@ -3,9 +3,9 @@
 # See the slurm.conf man page for more information.
 #
 #
-ControlMachine=home
+ControlMachine=home  # $(hostname -s)
 ControlAddr=127.0.0.1
-# ControlAddr=193.140.196.159
+# ControlAddr=193.x.x.x
 #BackupController=
 #BackupAddr=
 AuthType=auth/munge
@@ -16,7 +16,7 @@ CryptoType=crypto/munge
 #Epilog=
 #EpilogSlurmctld=
 #FirstJobId=1
-#MaxJobId=999999
+# MaxJobId=67108863
 #GresTypes=
 #GroupUpdateForce=0
 #GroupUpdateTime=600
@@ -81,7 +81,7 @@ InactiveLimit=0
 KillWait=0
 #MessageTimeout=10
 #ResvOverRun=0
-MinJobAge=86400
+MinJobAge=172800  # 48 h
 #OverTimeLimit=0
 SlurmctldTimeout=120
 SlurmdTimeout=300
@@ -145,18 +145,9 @@ SlurmdDebug=3
 #SlurmSchedLogLevel=
 #
 #
-# POWER SAVE SUPPORT FOR IDLE NODES (optional)
-#SuspendProgram=
-#ResumeProgram=
-#SuspendTimeout=
-#ResumeTimeout=
-#ResumeRate=
-#SuspendExcNodes=
-#SuspendExcParts=
-#SuspendRate=
-#SuspendTime=
-#
-#
 # COMPUTE NODES
-NodeName=home[1-4] NodeHostName=home NodeAddr=127.0.0.1 CPUs=1
-PartitionName=debug Nodes=home[1-4] Default=YES MaxTime=INFINITE State=UP
+NodeName=instance-2[1-2] CPUs=2 NodeHostName=home NodeAddr=127.0.0.1
+PartitionName=debug Nodes=instance-2[1-2] Default=YES MaxTime=INFINITE State=UP Shared=FORCE:1
+
+# NodeName=dummy26[1-100] NodeHostName=achille Port=[6001-6100] NodeAddr=127.0.0.1 CPUs=4 RealMemory=6000
+# PartitionName=mira Default=yes Nodes=dummy26[1-100]
