Compact transaction calls in Contract.py

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
+PROVIDER_ID="0x0000000000000000000000000000000000000000"
 WHOAMI=""
 SLURMUSER=""
 DATADIR=""
 LOG_PATH=""
 RPC_PORT=8545
 EBLOCPATH=""
-PROVIDER_ID=""
 OC_USER=""
 GDRIVE=""
 IS_GETH_TUNNEL=""
