--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+__pycache__/
 ebloc_broker.egg-info/
 \.mypy_cache/
 contract/build/
@@ -163,9 +164,9 @@ venv/bin/python3
 venv/lib64
 venv/pyvenv\.cfg
 workflow/\.pytest_cache/
-slurm.out
-slurm.err
 *.*.bak
 password.secret
-rm slurm-*.out
 eblocbroker_bloxberg_deployed.txt
+slurm.out
+slurm.err
+slurm-*.out
