--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 AccessControl==4.2
 Acquisition==4.6
 aiodns==2.0.0
-aiohttp==3.8.0
+aiohttp==3.7.4.post0
 aiosignal==1.2.0
 apipkg==1.5
 appdirs==1.4.4
@@ -9,20 +9,20 @@ APScheduler==3.8.0
 aspy.refactor-imports==2.1.1
 astroid==2.8.4
 asttokens==2.0.4
-async-timeout==4.0.0
+async-timeout==3.0.1
 attrdict==2.0.1
 attrs==21.2.0
 AuthEncoding==4.1
 autobahn==20.12.3
 Automat==20.2.0
-autopep8==1.5.7
+autopep8==1.6.0
 backcall==0.2.0
 base58==2.1.0
 bcrypt==3.1.7
 beautifulsoup4==4.9.1
 bitarray==1.2.2
 black==21.9b0
-bleach==4.0.0
+bleach==4.1.0
 blinker==1.4
 bpyutils==0.2.0
 bs4==0.0.1
@@ -50,7 +50,7 @@ cycler==0.10.0
 cytoolz==0.11.0
 daemon==1.2
 daemons==1.3.2
-dataclassy==0.11.0
+dataclassy==0.11.1
 dateparser==1.0.0
 DateTime==4.3
 dbfread==2.0.4
@@ -98,9 +98,9 @@ hexbytes==0.2.2
 httplib2==0.14.0
 humanfriendly==8.1
 hyperlink==20.0.1
-hypothesis==6.23.2
+hypothesis==6.24.0
 identify==1.4.19
-idna==3.2
+idna==3.3
 ijson==2.6.1
 imageio==2.9.0
 importchecker==2.0
@@ -138,8 +138,6 @@ lxml==4.6.3
 Mako==1.1.0
 Markdown==3.1.1
 MarkupSafe==2.0.1
-matplotlib==3.3.3
-matplotlib-inline==0.1.2
 mccabe==0.6.1
 mdv==1.7.4
 mercurial==5.4.2
@@ -181,12 +179,14 @@ pickleshare==0.7.5
 Pillow==8.0.1
 pipenv==2020.11.15
 pipupgrade==1.10.1
+pkg_resources==0.0.0
 pkginfo==1.5.0.1
 platformdirs==2.4.0
 pluggy==1.0.0
 ppi==0.0.4
 pre-commit==2.5.1
-protobuf==3.18.1
+prompt-toolkit==3.0.21
+protobuf==3.19.0
 psutil==5.8.0
 ptyprocess==0.7.0
 py==1.10.0
@@ -216,10 +216,11 @@ pymongo==3.11.0
 pymy==0.0.8
 PyMySQL==0.9.3
 PyNaCl==1.4.0
+pynspector==0.0.4
 pyocclient==0.6
 pyOpenSSL==20.0.1
 pypandoc==1.6.3
-pyparsing==2.4.7
+pyparsing==3.0.3
 pyright==0.0.9
 pyrsistent==0.18.0
 pyserial==3.4
@@ -245,7 +246,7 @@ pytz==2020.1
 pyxdg==0.26
 PyYAML==5.4.1
 readme-renderer==26.0
-regex==2021.10.8
+regex==2021.10.23
 reportlab==3.5.67
 requests==2.26.0
 requests-toolbelt==0.9.1
@@ -253,9 +254,9 @@ requests-unixsocket==0.2.0
 RestrictedPython==5.0
 rfc3986==1.4.0
 rich==10.12.0
-rlp==1.2.0
+rlp==2.0.1
 roman==3.3
-rope==0.19.0
+rope==0.21.1
 ruamel.yaml==0.17.10
 ruamel.yaml.clib==0.2.6
 SecretStorage==3.3.1
@@ -281,7 +282,7 @@ termcolor==1.1.0
 testresources==2.0.1
 tk==0.1.0
 toml==0.10.2
-tomli==1.2.1
+tomli==1.2.2
 toolz==0.11.1
 tox==3.24.3
 tqdm==4.62.3
@@ -303,6 +304,7 @@ varint==1.0.2
 virtualenv==20.0.10
 virtualenv-clone==0.5.4
 virtualenvwrapper==4.8.4
+vulcano==0.5.3
 vvm==0.1.0
 vyper==0.3.0
 wadllib==1.3.3
@@ -315,12 +317,12 @@ WebOb==1.8.7
 websockets==9.1
 WebTest==2.0.35
 Werkzeug==1.0.1
-wrapt==1.13.1
+wrapt==1.13.2
 WSGIProxy2==0.4.6
 WTForms==2.3.1
 xlrd==1.2.0
 yapf==0.31.0
-yarl==1.7.2
+yarl==1.7.0
 yfinance==0.1.63
 z3c.pt==3.3.0
 zc.lockfile==2.0
@@ -350,4 +352,3 @@ zope.security==5.1.1
 zope.tales==5.1
 zope.testing==4.9
 zope.traversing==4.4.1
-vulcano==0.5.3
