--- a/broker/test_setup/nas/job_nas.yaml
+++ b/broker/test_setup/nas/job_nas.yaml
@@ -1,12 +1,12 @@
 config:
     requester_address: '0xD118b6EF83ccF11b34331F1E7285542dDf70Bc49'
-    provider_address: '0x765508fc8f78a465f518ae79897d0e4b249e82dc'
+    provider_address: '0xeab50158e8e51de21616307a99c9604c1c453a02'
     source_code:
-        storage_id: gdrive
+        storage_id: ipfs
         cache_type: public
         path: ~/test_eblocbroker/NPB3.3-SER_source_code
         storage_hours: 0
-    data_transfer_out: 1
+    data_transfer_out: 5
     jobs:
         job1:
             cores: 1
